<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F0E68C"
    tools:context=".MainActivity"
    >
    <!-- Welcome message -->
    <TextView
        android:id="@+id/welcome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginBottom="468dp"
        android:gravity="center"
        android:text="Welcome!"
        android:textColor="#333333"
        android:textSize="35sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <!-- Username Label -->
    <EditText
        android:id="@+id/edit_username"
        android:layout_width="281dp"
        android:layout_height="47dp"
        android:layout_marginBottom="368dp"
        android:hint="@string/username"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.41"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />
    <!-- Password Label -->
    <EditText
        android:id="@+id/edit_password"
        android:layout_width="293dp"
        android:layout_height="40dp"
        android:layout_marginBottom="284dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.43"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />
    <!-- Show Password Checkbox -->
    <CheckBox
        android:id="@+id/showpassword"
        android:layout_width="358dp"
        android:layout_height="31dp"
        android:layout_marginBottom="252dp"
        android:text="Show Password"
        android:onClick="showPassword"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <!-- Remember me Checkbox -->
    <CheckBox
        android:id="@+id/rememberme"
        android:layout_width="130dp"
        android:layout_height="33dp"
        android:layout_marginRight="64dp"
        android:layout_marginBottom="252dp"
        android:text="Remember me"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent" />
    <!-- Login Label -->
    <Button
        android:id="@+id/Login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="188dp"
        android:onClick="login"
        android:text="@string/login"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.204"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <!-- Register -->
    <TextView
        android:id="@+id/register"
        android:layout_width="117dp"
        android:layout_height="63dp"
        android:layout_centerInParent="true"
        android:layout_marginBottom="180dp"
        android:clickable="true"
        android:onClick="register"
        android:gravity="center"
        android:text="@string/register"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="17sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.659"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

</android.support.constraint.ConstraintLayout>